# rendering_examples

./: CMakeLists.txt  README.md
001.ads_reflection/: CMakeLists.txt  run.bat
001.ads_reflection/shader/: phong.vert
001.ads_reflection/src/: Main.cpp
01.ads_reflection/: CMakeLists.txt  run.bat
01.ads_reflection/src/: GLSLProgram.h  VBOTorus.h
01.lighting/01.ads_reflection/: CMakeLists.txt  README.md  run.bat
01.lighting/01.ads_reflection/src/: GLSLProgram.cpp  Main.cpp  VBOTorus.cpp
GLTest/: GLTest.sln
GLTest/GLTest/: GLSLProgram.cpp  GLSLProgram.h  GLTest.vcxproj  GLTest.vcxproj.filters  Main.cpp  VBOTorus.cpp  VBOTorus.h
GLTest/include/glad/glad/: glad.h
GLTest/lib/glad.x64/: glad.lib
cmake/modules/: FindGLEW.cmake  FindGLFW3.cmake  FindGLM.cmake
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
